--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "langchain": "^0.3.27",
     "multer": "^2.0.0",
+    "path": "^0.12.7",
     "pdf-parse": "^1.1.1"
   }
 }
